--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,7 @@
                 <module>security-admin</module>
                 <module>plugin-kafka</module>
                 <module>plugin-solr</module>
+                <module>plugin-nestedstructure</module>
                 <module>plugin-nifi</module>
                 <module>plugin-nifi-registry</module>
                 <module>plugin-presto</module>
@@ -351,6 +352,7 @@
                 <module>security-admin</module>
                 <module>plugin-kafka</module>
                 <module>plugin-solr</module>
+                <module>plugin-nestedstructure</module>
                 <module>plugin-nifi</module>
                 <module>plugin-nifi-registry</module>
                 <module>plugin-presto</module>
@@ -665,6 +667,7 @@
                 <module>security-admin</module>
                 <module>plugin-kafka</module>
                 <module>plugin-solr</module>
+                <module>plugin-nestedstructure</module>
                 <module>plugin-nifi</module>
                 <module>plugin-nifi-registry</module>
                 <module>plugin-kudu</module>
@@ -752,6 +755,7 @@
                 <module>plugin-kafka</module>
                 <module>plugin-solr</module>
                 <module>plugin-nifi</module>
+                <module>plugin-nestedstructure</module>
                 <module>plugin-nifi-registry</module>
                 <module>plugin-presto</module>
                 <module>ugsync-util</module>
